[gd_scene load_steps=16 format=2]

[ext_resource path="res://Resources/ui/4.png" type="Texture" id=1]
[ext_resource path="res://Resources/ui/2.png" type="Texture" id=2]
[ext_resource path="res://Resources/ui/Idle 27.png" type="Texture" id=3]
[ext_resource path="res://Resources/ui/Pressed 27.png" type="Texture" id=4]
[ext_resource path="res://Others/data.gd" type="Script" id=5]
[ext_resource path="res://Resources/ui/Pixellari.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://User Interface/4.tscn" type="PackedScene" id=7]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 6 )

[node name="data" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="4" parent="." instance=ExtResource( 7 )]
offset = Vector2( -277, -45 )
transform = Transform2D( 1, 0, 0, 1, -277, -45 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="MarginContainer"]
margin_right = 246.0
margin_bottom = 138.0
custom_constants/vseparation = 13
custom_constants/hseparation = 14
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="coin" type="Label" parent="MarginContainer/GridContainer"]
margin_right = 143.0
margin_bottom = 16.0
custom_fonts/font = SubResource( 1 )
text = "Total Coin Collected:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="coin2" type="Label" parent="MarginContainer/GridContainer"]
margin_left = 157.0
margin_right = 178.0
margin_bottom = 16.0
custom_fonts/font = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="life" type="Label" parent="MarginContainer/GridContainer"]
margin_top = 29.0
margin_right = 143.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 3 )
text = "Total death:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="life2" type="Label" parent="MarginContainer/GridContainer"]
margin_left = 157.0
margin_top = 29.0
margin_right = 178.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="current_level" type="Label" parent="MarginContainer/GridContainer"]
margin_top = 58.0
margin_right = 143.0
margin_bottom = 74.0
custom_fonts/font = SubResource( 5 )
text = "Current level:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="current_level2" type="Label" parent="MarginContainer/GridContainer"]
margin_left = 157.0
margin_top = 58.0
margin_right = 178.0
margin_bottom = 74.0
custom_fonts/font = SubResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="total_level" type="Label" parent="MarginContainer/GridContainer"]
margin_top = 87.0
margin_right = 143.0
margin_bottom = 103.0
custom_fonts/font = SubResource( 7 )
text = "Total levels in game:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="total_level2" type="Label" parent="MarginContainer/GridContainer"]
margin_left = 157.0
margin_top = 87.0
margin_right = 178.0
margin_bottom = 103.0
custom_fonts/font = SubResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/GridContainer"]
margin_top = 116.0
margin_right = 143.0
margin_bottom = 138.0

[node name="exit2" type="TextureButton" parent="MarginContainer/GridContainer/HBoxContainer"]
margin_right = 21.0
margin_bottom = 22.0
action_mode = 0
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 2 )

[node name="reset2" type="TextureButton" parent="MarginContainer/GridContainer"]
margin_left = 157.0
margin_top = 116.0
margin_right = 178.0
margin_bottom = 138.0
action_mode = 0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
[connection signal="pressed" from="MarginContainer/GridContainer/HBoxContainer/exit2" to="." method="_on_exit2_pressed"]
[connection signal="pressed" from="MarginContainer/GridContainer/reset2" to="." method="_on_reset2_pressed"]
